转角动画更新

--- a/index.html
+++ b/index.html
@@ -48,24 +48,50 @@
 		 
 		@keyframes clipMe {
 		  0%, 100% {
-		    clip: rect(0px, 220.0px, 15px, 205px);
+		    clip: rect(0px, 220.0px, 2px, 160px);
 		  }
 		}   
 
-		@keyframes clipMe {
+		@keyframes clipMe1 {
 		  0%, 100% {
-		    clip: rect(0px, 30px, 30px, 0px);
+		    clip: rect(0px, 220px, 60px, 0px);
 		  }
 		  25% {
-		    clip: rect(190px, 30px, 220.0px, 0px);
+		    clip: rect(160px, 60px, 220.0px, 0px);
 		  }
 		  50% {
-		    clip: rect(190px, 220.0px, 220.0px, 190px);
+		    clip: rect(160px, 220.0px, 220.0px, 160px);
 		  }
 		  75% {
-		    clip: rect(0px, 220.0px, 30px, 190px);
+		    clip: rect(0px, 220.0px, 60px, 220px);
 		  }
-		}   
+		}
+		@keyframes clipMe {
+		  0%, 100% {
+		    clip: rect(0px, 2px, 60px, 0px);
+		  }
+		  18.2% {
+		    clip: rect(160px, 2px, 220.0px, 0px);
+		  }
+		  25% {
+		    clip: rect(218px, 60px, 220.0px, 0px);
+		  }
+		  43.2% {
+		    clip: rect(218px, 220.0px, 220.0px, 160px);
+		  }
+		  50% {
+		    clip: rect(160px, 220.0px, 220.0px, 218px);
+		  }
+		  68.2% {
+		    clip: rect(0px, 220.0px, 60px, 218px);
+		  }
+		  75% {
+		    clip: rect(0px, 220.0px, 2px, 160px);
+		  }
+		  93.2% {
+		    clip: rect(0px, 60px, 2px, 0px);
+		  }
+		}    
 	</style>
 </head>
 <body>
